# MCTS-playground

./: .gitignore  AlphaZero overview.md  Dirichlet AlphaZero.md  LICENSE  README.md  board.py  encoder.py  game_engine.py  install.sh  main.py  pyproject.toml  random_agent.py  tic_tac_toe_transformer_sweep.ipynb
AlphaZero/: test_tree_search.py  tree_search.py  tree_search_algorithm.py
NNmodels/: SimpleMLP.py
checkpoints/: tic_tac_toe_experimental_transformer_best_model.pt
core/: README.md  __init__.py  agent.py  base.py  benchmark.py  data_structures.py  generate_self_play_data.py  model.py  model_interface.py  simulation.py  state.py  supervised_training_loop.py  tensor_mapping.py  trainer.py  training.py  training_adapter.py  tree_search.py  types.py  wandb.py
docs/: algorithms_overview.md
mcts_playground/: README.md  __init__.py  agent.py  data_structures.py  evaluation.py  generate_self_play_data.py  model_interface.py  simulation.py  state.py  tensor_mapping.py  training.py  training_adapter.py  tree_search.py  types.py
notebooks/: tic-tac-toe-transformer-debug.ipynb  tic_tac_toe_inspect_experimental_transformer_model.ipynb  tic_tac_toe_training_data.ipynb  tic_tac_toe_transformer_single_run.ipynb  tic_tac_toe_transformer_single_run_2.ipynb  tic_tac_toe_transformer_sweep_2.ipynb
notes/: AlphaZero overview.md  Dirichlet AlphaZero 2.md  Dirichlet AlphaZero.md  Notes on tic tac toe models.md  RL for games.md  google_cloud_setup_guide.md
tests/: dots-and-boxes-MCTS.ipynb  test_1.py  test_connect4_tensor_mapping.py  test_connect_four_tensor_mapping.py  (+11 more)
(+125 files in other folders)
