# pyproject.toml  (place at repo root)
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcts-playground"
version = "0.1.0"
description = "A modular Python framework for AlphaZero and MCTS research"
authors = [{ name = "Eivind Otto Hjelle", email = "eohjelle@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"

# Pure-Python or pip-friendly deps
dependencies = [
    "torch",
    "einops",
    "wandb",
    "absl-py",
    "numpy>=2.3.5",
    "pytest>=9.0.1",
]
  
[project.optional-dependencies]
open_spiel = ["open_spiel"] # If not installing from source (as in install.sh)

[tool.setuptools]
packages = ["mcts_playground"] 
